hphp/hack/test/typecheck/static_method_call_classname_with_generics.php.like_types.exp
File "static_method_call_classname_with_generics.php", line 16, characters 9-10:
Invalid argument (Typing[4110])
File "static_method_call_classname_with_generics.php", line 9, characters 28-28:
Expected ~[unresolved] because it is an unenforceable type
File "static_method_call_classname_with_generics.php", line 14, characters 15-17:
But got int
